# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

option(
    'benchmarks',
    type: 'boolean',
    description: 'Build the Arrow micro benchmarks',
    value: false,
)

option(
    'csv',
    type: 'boolean',
    description: 'Build the Arrow CSV Parser Module',
    value: false,
)

option(
    'hdfs',
    type: 'boolean',
    description: 'Build the Arrow HDFS bridge',
    value: false,
)

option(
    'integration',
    type: 'boolean',
    description: 'Build the Arrow integration test executables',
    value: false,
)

option(
    'ipc',
    type: 'boolean',
    description: 'Build the Arrow IPC extensions',
    value: false,
)

option(
    'json',
    type: 'boolean',
    description: 'Build Arrow with JSON support',
    value: false,
)

option(
    'git_id',
    type: 'string',
)

option(
    'git_description',
    type: 'string',
)

option(
    'package_kind',
    type: 'string',
    description: 'Arbitrary string that identifies the kind of package (for informational purposes)',
)

option(
    'testing',
    type: 'boolean',
    description: 'Build the Arrow testing libraries',
    value: false,
)

option(
    'tests',
    type: 'boolean',
    description: 'Build the Arrow googletest unit tests',
    value: false,
)
