# Licensed to the Apache Software Foundation (ASF) under one
# or more contributor license agreements.  See the NOTICE file
# distributed with this work for additional information
# regarding copyright ownership.  The ASF licenses this file
# to you under the Apache License, Version 2.0 (the
# "License"); you may not use this file except in compliance
# with the License.  You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing,
# software distributed under the License is distributed on an
# "AS IS" BASIS, WITHOUT WARRANTIES OR CONDITIONS OF ANY
# KIND, either express or implied.  See the License for the
# specific language governing permissions and limitations
# under the License.

option('acero', type: 'feature', description: 'Build the Arrow Acero Engine Module')
option(
    'azure',
    type: 'feature',
    description: 'Build Arrow with Azure support (requires the Azure SDK for C++)',
)

option('benchmarks', type: 'feature', description: 'Build the Arrow micro benchmarks')
option('brotli', type: 'feature', description: 'Build with Brotli compression')
option('bz2', type: 'feature', description: 'Build with BZ2 compression')
option('compute', type: 'feature', description: 'Build all Arrow Compute kernels')
option('csv', type: 'feature', description: 'Build the Arrow CSV Parser Module')
option('filesystem', type: 'feature', description: 'Build the Arrow Filesystem Layer')
option('fuzzing', type: 'feature', description: 'Build Arrow Fuzzing executables')

option(
    'gcs',
    type: 'feature',
    description: 'Build Arrow with GCS support (requires the Google Cloud Platform C++ Client Libraries)',
)

option('hdfs', type: 'feature', description: 'Build the Arrow HDFS bridge')

option(
    'integration',
    type: 'feature',
    description: 'Build the Arrow integration test executables',
)

option(
    'ipc',
    type: 'feature',
    description: 'Build the Arrow IPC extensions',
    value: 'enabled',
)

option('json', type: 'feature', description: 'Build Arrow with JSON support')

option(
    'flight',
    type: 'feature',
    description: 'Build the Arrow Flight RPC System (requires GRPC, Protocol Buffers)',
)

option('git_id', type: 'string')
option('git_description', type: 'string')

option(
    'lz4',
    type: 'feature',
    description: 'Build with lz4 compression',
)

option(
    'package_kind',
    type: 'string',
    description: 'Arbitrary string that identifies the kind of package (for informational purposes)',
)

option('snappy', type: 'feature', description: 'Build with snappy compression')
option(
    's3',
    type: 'feature',
    description: 'Build Arrow with S3 support (requires the AWS SDK for C++)',
)

option(
    'tensorflow',
    type: 'feature',
    description: 'Build Arrow with TensorFlow support enabled',
)

option('testing', type: 'feature', description: 'Build the Arrow testing libraries')
option('tests', type: 'feature', description: 'Build the Arrow googletest unit tests')

option('utilities', type: 'feature', description: 'Build Arrow commandline utilities')
option('zlib', type: 'feature', description: 'Build with zlib compression')
option('zstd', type: 'feature', description: 'Build with zstd compression')
